mejoras en search y show contact profile

--- a/client/components/App/body/App_body.html
+++ b/client/components/App/body/App_body.html
@@ -33,6 +33,12 @@
 <!--  {{> App_nav}}-->
 {{> header}}
 
+<!-- Search Results -->
+<div id='search-result-wrapper'>
+  {{> App_searchResults}}
+
+</div>
+
 <!-- Navigation -->
 {{> navigation }}
 
