--- a/client/components/Birthday/Birthday_show.html
+++ b/client/components/Birthday/Birthday_show.html
@@ -3,7 +3,7 @@
     {{#if validBDay}}
     {{#if age}}
       {{#if isToday }}<!-- >>>>>> isToday -->
-        <h6 class="label label-100">Hoy cumple {{age}}!</h6>
+        <h6 class="label label-100"> <i class='fa fa-gift'></i> Hoy cumple {{age}}!</h6>
         {{else}} <!-- bDay is not today -->
           {{#if hasPassed}}<!-- >>>>>>   hasPassed -->
             {{#if moreThanAWeekAgo}}<!-- >>>>>>   moreThanAWeekAgo -->
