--- a/client/components/Contact/Contact_show.html
+++ b/client/components/Contact/Contact_show.html
@@ -34,8 +34,8 @@
                   <p class='text-muted'>
                     <small class='text-muted'>
                       {{#if getGender isMale}}
-                        <i class='fa fa-mars'> </i>{{else}}
-                        <i class='fa fa-venus'> </i>
+                        <i class='fa fa-male'> </i>{{else}}
+                        <i class='fa fa-female'> </i>
                       {{/if}}
 
 
