--- a/client/components/common/page-header.html
+++ b/client/components/common/page-header.html
@@ -22,9 +22,10 @@
                         </li>
                     </ol>
                 </div>
-                <h2 class="font-light m-b-xs">
+                <h3 class="font-light m-b-xs">
                     {{title}}
-                </h2>
+                </h3>
+                <!-- {{desc}} -->
                 <small>{{desc}}</small>
             </div>
         </div>
