--- a/client/stylesheets/globals/dropdown.import.less
+++ b/client/stylesheets/globals/dropdown.import.less
@@ -39,9 +39,12 @@
 .dropdown-menu.hdropdown li > a:hover, .dropdown-menu.filedropdown li > a:hover {
   background: inherit;
 }
+li.search_fast_result > a:hover , li.search_result_item > a:hover {
+  background: @color-yellow;
+}
 
-.dropdown-menu.hdropdown li:hover, .dropdown-menu.filedropdown li:hover {
-  background: @color-background;
+li.search_fast_result:hover, li.search_result_item:hover {
+  background: @color-yellow; 
 }
 
 .dropdown-menu.hdropdown li.summary {
