--- a/client/components/App/header/header.html
+++ b/client/components/App/header/header.html
@@ -1,23 +1,32 @@
 <template name="header">
+
     <div id="header">
         <div class="color-line">
         </div>
         <div id="logo" class="light-version">
         <span>
-            {{appname}}
+          <a href="./">  {{appname}}</a>
         </span>
         </div>
         <nav role="navigation">
             <div class="header-link hide-menu"><i class="fa fa-bars"></i></div>
             <div class="small-logo">
-                <span class="text-primary">super name</span>
+                <span class="text-primary">    {{appname}}
+</span>
             </div>
-            <form role="search" class="navbar-form-custom" method="post" action="#">
-                <div class="form-group">
-                    <input type="text" placeholder="Busca lo que quieras" class="form-control" name="search">
+
+
+            <form data-action='header-search-form' role="search" class="navbar-form-custom" method="post" action="#">
+                <div data-action='header-search' class="form-group">
+                  {{> EasySearch.Input index=headerIndex attributes=headerInputAttributes noDocumentsOnEmpty='true' }}
+                    <!-- <input type="text" placeholder="Busca lo que quieras" class="form-control" name="search"> -->
                 </div>
+
             </form>
+
             <div class="mobile-menu">
+
+
                 <button type="button" class="navbar-toggle mobile-menu-toggle" data-toggle="collapse" data-target="#mobile-collapse">
                     <i class="fa fa-chevron-down"></i>
                 </button>
@@ -30,7 +39,8 @@
                             <a class="" href="{{pathFor ''}}">Logout</a>
                         </li>
                         <li>
-                            <a class="" href="{{pathFor 'profile'}}">Profile</a>
+                      Buscar
+
                         </li>
                     </ul>
                 </div>
@@ -38,30 +48,7 @@
             <div class="navbar-right">
                 <ul class="nav navbar-nav no-borders">
                     <!--<li class="dropdown">-->
-                    <li>
-                        <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                            <i class="pe-7s-speaker"></i>
-                        </a>
-                        <ul class="dropdown-menu hdropdown notification animated flipInX">
 
-                            <li>
-                                <a>
-                                    <span class="label label-success">NEW</span> It is a long established.
-                                </a>
-                            </li>
-                            <li>
-                                <a>
-                                    <span class="label label-warning">WAR</span> There are many variations.
-                                </a>
-                            </li>
-                            <li>
-                                <a>
-                                    <span class="label label-danger">ERR</span> Contrary to popular belief.
-                                </a>
-                            </li>
-                            <li class="summary"><a href="#">See all notifications</a></li>
-                        </ul>
-                    </li>
                     <li >
                         <a class="dropdown-toggle" href="{{pathFor 'home'}}" >
                             <i class="pe-7s-keypad"></i>
@@ -114,4 +101,8 @@
             </div>
         </nav>
     </div>
+
+
+
+
 </template>
