--- a/client/components/Dashboard/Dashboard.html
+++ b/client/components/Dashboard/Dashboard.html
@@ -34,6 +34,7 @@
 
         <div class="content">
 
+
             {{#pageTitle title="Panel de Control Principal"}}
 
                 Special
@@ -41,6 +42,25 @@
                 for small, medium and large webapp with very clean and aesthetic style and feel.
 
             {{/pageTitle}}
+            <!-- <div class="row"> -->
+                            <!-- <div class="col-lg-12"> -->
+                                <!-- <div class="hpanel"> -->
+                                    <!-- <div class="panel-body float-e-margins"> -->
+                                        <!-- <div class="wrapper"> -->
+
+
+
+                                        <!-- </div> -->
+                                    <!-- </div> -->
+                                <!-- </div> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+
+
+
+
+
+
 
             <div class="row">
                 <div class="col-lg-12">
@@ -48,6 +68,7 @@
                     {{#panel title="Dashboard information and statistics" footer="Last update: 21.05.2015" footerRight="You have two new messages from Monica Bolt" }}
 
                         <div class="row">
+
                             <div class="col-md-3 text-center">
                                 <div class="small">
                                     <i class="fa fa-bolt"></i>
@@ -57,6 +78,11 @@
                                     <h1 class="font-extra-bold m-t-xl m-b-xs">
                                         226,802
                                     </h1>
+                                    <button type="button" class="btn btn-sm btn-default" data-container="body"
+                                                    data-toggle="popover" data-placement="bottom" data-title="Title example"
+                                                    data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+                                                Popover on bottom
+                                            </button>
                                     <small>Page views in last month</small>
                                 </div>
                                 <div class="small m-t-xl">
@@ -68,7 +94,7 @@
                                 <p class='text-left text-info'>
                                     <small>BUSCAR</small>
                                 </p>
-                                {{> Search_actode}}
+                                <!-- {{> Search_actode}} -->
                             </div>
                             <div class="col-md-3 text-center">
                                 <div class="small">
@@ -91,6 +117,41 @@
                     {{/panel}}
 
                 </div>
+            </div>
+            <div class='row'>
+              <div class='col-lg-3'>
+                {{#panel title="Collapse  example" built=true}}
+
+                        <div class="text-center m-b-md">
+                            <h3>Collapse box</h3>
+                            <small>AngularJS version of Bootstrap's collapse plugin. Provides a simple way to hide and
+                                show
+                                an element with a css transition
+                            </small>
+                            <br/>
+                            <button class="btn btn-default btn-sm" type="button" data-toggle="collapse"
+                                    data-target="#collapseExample" aria-expanded="false"
+                                    aria-controls="collapseExample">
+                                Toggle collapse
+                            </button>
+                        </div>
+                        <div class="collapse in" id="collapseExample">
+                            <div class="well well-lg">
+                                <h5 class="font-bold">Lorem ipsum</h5>
+                                A wonderful serenity has taken possession of my entire soul, like these sweet mornings
+                                of
+                                spring which I enjoy with my whole heart.
+                                <br/>
+                                <br/>
+                                I am alone, and feel the charm of existence in this spot, which was created for the
+                                bliss of
+                                souls like mine. Thousand unknown plants are noticed by me: when I hear the buzz of the
+                                little world among the stalks.
+                            </div>
+                        </div>
+                    {{/panel}}
+              </div>
+
             </div>
             <div class="row">
                 <div class="col-lg-3">
@@ -148,36 +209,7 @@
                     {{/panel}}
 
                 </div>
-                <div class="col-lg-3">
 
-                    {{#panel footer="Opciones de creacion" panelClass="stats"}}
-
-                        {{#if showCreateOptions}}
-                            {{> Create_options}}
-                        {{else}}
-                            <button id="btn-create" class="btn btn-primary">CREAR</button>
-
-                            <div class="dropdown">
-                                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
-                                    <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#">HTML</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">CSS</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">JavaScript</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        {{/if}}
-
-                    {{/panel}}
-
-                </div>
                 <div class="col-lg-3">
 
                     {{#panel footer="This is standard panel footer" panelClass="stats"}}
