--- a/client/components/Exit/Exit.html
+++ b/client/components/Exit/Exit.html
@@ -1,4 +1,4 @@
 <template name="Exit">
-  <h1>Que tengas un excelente d&iacute;a!</h1>
-  <a href='/'>volver a ingresar</a>
+  <h1 class='center animated fadeInDown'>Que tengas un excelente d&iacute;a!</h1>
+  <a class='animated fadeInDown' href='/'>volver a ingresar</a>
 </template>
