admin a mano todavia

--- a/client/components/Contact/Contact_show_profile.html
+++ b/client/components/Contact/Contact_show_profile.html
@@ -2,34 +2,31 @@
     <!-- {{> pageHeader title="Ver Contacto" desc='Aca podes ver, editar y agregar informacion a tu contacto' category="Ver" }} -->
 
     {{#staggering}}
-    <a href="/show-1/shKQs4j2g7DRfLrnP">Michelo</a>
-    <button data-action='goContact'>goContact</button>
 
-        {{#with actode}}
             <div class="row">
 
                 <div class="col-lg-12 text-center m-t-md">
 
                     <p class='text-big'>
-                      {{treatedAs}}
+                      {{contact.treatedAs}}
                     </p>
 
-                    <h4>{{> Birthday_show}}</h4>
+                    <h4>{{> Birthday_show (birthData contact) }}</h4>
                     <p>
                         <small class='text-muted'>
-                            {{#if getGender isMale}}
+                            {{#if getGender contact.isMale}}
                                 <i class='fa fa-male'></i>
                             {{else}}
                                 <i class='fa fa-female'></i>
                             {{/if}}
-                            {{name}}
-                            {{actode.lastName}}
+                            {{contact.name}}
+                            {{contact.lastName}}
                         </small>
                     </p>
                     <p>
                         <small class='text-muted'></small>
                         <small class='text-muted'>
-                            {{#if formalTreatment}}
+                            {{#if contact.formalTreatment}}
                                 <span class='label label-warning'>FORMAL</span>
                             {{/if}}
                         </small>
@@ -38,56 +35,62 @@
                 </div>
 
             </div>
-            <div class='row'>
-            <div class="col-md-4">
-                <div class="hpanel hbggreen">
-                    <div class="panel-body">
-                        <div class="text-center">
-                            <p class="font-light">
-                                Llamar al m&oacute;vil
-                            </p>
-                            <i class='text-big pe-7s pe-7s-phone'></i>
-                            <p class="font-light">
-                              {{formatPhone mobile}}
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="hpanel hbgyellow">
-                    <div class="panel-body">
-                        <div class="text-center">
-                            <p class="font-light">
-                                Llamar al fijo
-                            </p>
-                            <i class='text-big pe-7s pe-7s-call'></i>
-                            <p class="font-light">
-                              {{formatPhone phone}} Interno : {{internalPhone}}
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="hpanel hbgblue">
-                    <div class="panel-body">
-                        <div class="text-center">
-                            <p class="font-light">
-                                Mandar un mail
-                            </p>
-                            <i class='text-big pe-7s pe-7s-mail'></i>
-                            <p class="font-light">
-                              {{email}}
-                            </p>
 
-                        </div>
-                    </div>
+
+            <div class='row'>
+              <div class='col-md-1'>
+              </div>
+            {{#if contact.mobile}}
+              <div class="col-md-3">
+                  <a type='button' class='btn btn-primary btn-lg btn-block' href='tel:{{mobile}}'>
+                    <div class="text-center">
+                      <p class="font-light">
+                          Llamar al m&oacute;vil
+                      </p>
+                      <i class='text-big pe-7s pe-7s-phone'></i>
+                      <p class="font-light">
+                        {{phoneCountry contact.mobile}}
+                        {{formatInternational contact.mobile}}
+                      </p>
+                  </div>
+                </a>
+              </div>
+            {{/if}}
+
+{{#if contact.phone}}
+            <div class="col-md-4">
+                <a type='button' class='btn btn-primary2 btn-lg btn-block' href='tel:{{contact.phone}}'>
+                  <div class="text-center">
+                    <p class="font-light">
+                        Llamar al fijo
+                    </p>
+                    <i class='text-big pe-7s pe-7s-phone'></i>
+                    <p class="font-light">
+                    {{formatInternational contact.phone}} Interno : {{contact.internalPhone}}
+                    </p>
                 </div>
+              </a>
             </div>
+{{/if}}
+{{#if contact.email}}
+            <div class="col-md-3">
+                <a type='button' class='btn btn-success btn-lg btn-block' href='mailto:{{contact.email}}'>
+                  <div class="text-center">
+                    <p class="font-light">
+                        Mandar un mail
+                    </p>
+                    <i class='text-big pe-7s pe-7s-phone'></i>
+                    <p class="font-light">
+                    {{contact.email}}
+                    </p>
+                </div>
+              </a>
+            </div>
+{{/if}}
+          </div>
+          <div class='col-md-1'>
           </div>
 
-        {{/with}}
         <div class='row'>
 
         <div class="col-lg-6">
@@ -103,34 +106,32 @@
                         {{#if creating}}
                             {{Alert_Form_Create}}
                         {{/if}}
-                        {{#with actode}}
                             {{#if editingId 'actode'}}
                                 {{> Contact_edit}}
                             {{else}}
                                 <p>NOMBRE:
-                                    {{name}}
-                                    {{middleName}}
+                                    {{contact.name}}
+                                    {{contact.middleName}}
                                 </p>
                                 <p>APELLIDO:
-                                    {{lastName}}</p>
+                                    {{contact.lastName}}</p>
                                 <p>EMAIL :
-                                    {{email}}</p>
+                                    {{contact.email}}</p>
                                 <p>CELULAR:
-                                    {{mobile}}</p>
+                                    {{formatInternational contact.mobile}}</p>
                                 <p>TELEFONO DE LINEA:
-                                    {{phone}}</p>
+                                    {{formatInternational contact.phone}}</p>
                                 <p>INTERNO:
-                                    {{internalPhone}}</p>
+                                    {{contact.internalPhone}}</p>
                                 <p>TRATAMIENTO:
-                                    {{treatedAs}}
+                                    {{contact.treatedAs}}
                                     {{#if formalTreatment}}
                                         (Tratar de Ud.)
                                     {{/if}}
                                 </p>
                                 <p>CUMPLEA&Ntilde;OS:
-                                    {{bDay}}</p>
+                                    {{formatDate contact.bDay contact.bMonth contact.bYear}}</p>
                             {{/if}}
-                        {{/with}}
                     </div>
                 </div>
             {{/panel}}
