--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -5,7 +5,7 @@
 
 // Color list
 @color-navy-blue:#34495e;
-@color-violet:#9b59b6;
+@color-violet:#596587;
 @color-blue:#3498db;
 @color-green:#62cb31;
 @color-yellow:#ffb606;
@@ -22,9 +22,11 @@
 @color-alert-700: #c9cbcd;
 @color-alert-800: #d8d8d9;
 
-
-
-
+.map_canvas { 
+  width: 100%;
+  height: 400px;
+  margin: 10px 20px 10px 0;
+}
 
 
 
