--- a/imports/ui/components/rel/rel-customer-edit.html
+++ b/imports/ui/components/rel/rel-customer-edit.html
@@ -1,4 +1,4 @@
-<template name="Rel_create">
+<template name="Rel_customer_edit">
   <div class="panel panel-default appear-first">
     <div class="panel-heading">RELACION CON ESTA EMPRESA</div>
 
@@ -48,6 +48,8 @@
           </div>
       <div class='row'>
         <div class='col-xs-12'>
+          <span class="js-rel-customer-edit-cancel btn btn-default" type="submit">Cancelar</span>
+          
         <button class="btn btn-success" type="submit">CREAR</button>
       </div>
     </div>
