--- a/client/components/App/header/header.html
+++ b/client/components/App/header/header.html
@@ -36,7 +36,7 @@
                             <a class="" href="{{pathFor 'At.signin'}}">Login</a>
                         </li>
                         <li>
-                            <a class="" href="{{pathFor ''}}">Logout</a>
+                            <a class="" href="">Logout</a>
                         </li>
                         <li>
                       Buscar
@@ -93,7 +93,7 @@
                         </a>
                     </li>
                     <li class='dropdown'>
-                        <a href='./exit'>
+                        <a href={{pathFor 'exit'}}>
                             <i class="pe-7s-upload pe-rotate-90"></i>
                         </a>
                     </li>
