--- a/client/components/Birthday/Birthday_show.html
+++ b/client/components/Birthday/Birthday_show.html
@@ -1,91 +1,92 @@
 <template name="Birthday_show">
   <div>
-    {{#if validBDay}}
-    {{#if age}}
-      {{#if isToday }}<!-- >>>>>> isToday -->
-        <h6 class="label label-100"> <i class='fa fa-gift'></i> Hoy cumple {{age}}!</h6>
+    
+    {{#if validBDay dateOfBirth}}
+    {{#if age dateOfBirth}}
+      {{#if isToday dateOfBirth}}<!-- >>>>>> isToday -->
+        <h6 class="label label-100"> <i class='fa fa-gift'></i> Hoy cumple {{age dateOfBirth}}!</h6>
         {{else}} <!-- bDay is not today -->
-          {{#if hasPassed}}<!-- >>>>>>   hasPassed -->
-            {{#if moreThanAWeekAgo}}<!-- >>>>>>   moreThanAWeekAgo -->
-                <h5 class="label label-800"> Tiene {{age}}.Cumple: {{bDayPlain}}</h5>
+          {{#if hasPassed actualBirthDay}}<!-- >>>>>>   hasPassed -->
+            {{#if moreThanAWeekAgo actualBirthDay}}<!-- >>>>>>   moreThanAWeekAgo -->
+                <h5 class="label label-800"> Tiene {{age dateOfBirth}}.Cumple: {{bDayPlain actualBirthDay}}</h5>
               {{else}}  <!-- bDay was less than a week ago -->
-                {{#if wasYesterday}}<!-- >>>>>>   wasYesterday -->
-                    <h5 class="label label-200"> Tiene {{age}}.Cumpli&oacute; ayer!</h5>
+                {{#if wasYesterday dateOfBirth}}<!-- >>>>>>   wasYesterday -->
+                    <h5 class="label label-200"> Tiene {{age dateOfBirth}}.Cumpli&oacute; ayer!</h5>
                   {{else}}
-                    <h6 class="label label-500">Cumpli&oacute; {{age}} {{bDayClose}}</h6>
+                    <h6 class="label label-500">Cumpli&oacute; {{age dateOfBirth}} {{bDayClose actualBirthDay }}</h6>
                 {{/if}}<!--     wasYesterday <<<<<< -->
             {{/if}}<!--     moreThanAWeekAgo <<<<<< -->
             {{else}} <!-- bDay has not passed yet -->
-              {{#if isTomorrow}}<!-- >>>>>>   isTomorrow  -->
-                <h5 class="label label-200">Cumple {{newAge}} ma&ntilde;ana !</h5>
+              {{#if isTomorrow  actualBirthDay }}<!-- >>>>>>   isTomorrow  -->
+                <h5 class="label label-200">Cumple {{newAge dateOfBirth}} ma&ntilde;ana !</h5>
                 {{else}} <!-- bDay is not tomorrow -->
                   {{#if inLessThanAWeek}}<!-- >>>>>>   inLessThanAWeek -->
-                      <h5 class="label label-300"> Cumple {{newAge}} a&ntilde;os  {{bDayClose}}</h5>
+                      <h5 class="label label-300"> Cumple {{newAge dateOfBirth}} a&ntilde;os  {{bDayClose actualBirthDay}}</h5>
                     {{else}}<!-- bDay is in more than a week -->
                       {{#if inLessThanAMonth}}<!-- >>>>>>   inLessThanAMonth -->
-                        <h5 class="label label-400"> Cumple {{newAge}}  {{bDayLong}}</h5>
+                        <h5 class="label label-400"> Cumple {{newAge dateOfBirth}}  {{bDayLong actualBirthDay}}</h5>
                        {{else}}<!-- bDay is in more than a month -->
-                       <h5 class="label label-800"> Tiene {{age}}. Cumple: {{bDayPlain}}</h5>
+                       <h5 class="label label-800"> Tiene {{age dateOfBirth}}. Cumple: {{bDayPlain actualBirthDay}}</h5>
                       {{/if}}<!--     inLessThanAMonth <<<<<< -->
                   {{/if}}<!--     inLessThanAWeek <<<<<< -->
                 {{/if}}<!--     isTomorrow <<<<<< -->
             {{/if}}<!--    hasPassed <<<<<< -->
         {{/if}}<!--    isToday <<<<<< -->
     {{else}}
-      {{#if bornToday}}
+      {{#if bornToday dateOfBirth}}
         <h6 class="label label-100">Naci&oacute; hoy!</h6>
       {{else}}
-        {{#if newBorn}}
-          {{#if hasPassed}}<!-- >>>>>>   hasPassed -->
-            {{#if moreThanAWeekAgo}}<!-- >>>>>>   moreThanAWeekAgo -->
-                <h5 class="label label-800"> Tiene {{newBorn}}.Cumple: {{bDayPlain}}</h5>
+        {{#if newBorn dateOfBirth}}
+          {{#if hasPassed actualBirthDay}}<!-- >>>>>>   hasPassed -->
+            {{#if moreThanAWeekAgo actualBirthDay}}<!-- >>>>>>   moreThanAWeekAgo -->
+                <h5 class="label label-800"> Tiene {{newBorn dateOfBirth}}.Cumple: {{bDayPlain actualBirthDay}}</h5>
               {{else}}  <!-- bDay was less than a week ago -->
-                {{#if wasYesterday}}<!-- >>>>>>   wasYesterday -->
+                {{#if wasYesterday actualBirthDay}}<!-- >>>>>>   wasYesterday -->
                     <h5 class="label label-200"> Nacio ayer!</h5>
                   {{else}}
-                    <h6 class="label label-500">Nacio {{bDayClose}}</h6>
+                    <h6 class="label label-500">Nacio {{bDayClose actualBirthDay}}</h6>
                 {{/if}}<!--     wasYesterday <<<<<< -->
             {{/if}}<!--     moreThanAWeekAgo <<<<<< -->
             {{else}} <!-- bDay has not passed yet -->
-              {{#if isTomorrow}}<!-- >>>>>>   isTomorrow  -->
-                <h5 class="label label-200">Cumple {{newAge}} ma&ntilde;ana !</h5>
+              {{#if isTomorrow actualBirthDay}}<!-- >>>>>>   isTomorrow  -->
+                <h5 class="label label-200">Cumple {{newAge dateOfBirth}} ma&ntilde;ana !</h5>
                 {{else}} <!-- bDay is not tomorrow -->
-                  {{#if inLessThanAWeek}}<!-- >>>>>>   inLessThanAWeek -->
-                      <h5 class="label label-300"> Cumple {{newAge}} a&ntilde;os  {{bDayClose}}</h5>
+                  {{#if inLessThanAWeek actualBirthDay}}<!-- >>>>>>   inLessThanAWeek -->
+                      <h5 class="label label-300"> Cumple {{newAge dateOfBirth}} a&ntilde;os  {{bDayClose actualBirthDay}}</h5>
                     {{else}}<!-- bDay is in more than a week -->
-                      {{#if inLessThanAMonth}}<!-- >>>>>>   inLessThanAMonth -->
-                        <h5 class="label label-400"> Cumple {{newAge}}  {{bDayLong}}</h5>
+                      {{#if inLessThanAMonth actualBirthDay}}<!-- >>>>>>   inLessThanAMonth -->
+                        <h5 class="label label-400"> Cumple {{newAge dateOfBirth}}  {{bDayLong actualBirthDay}}</h5>
                        {{else}}<!-- bDay is in more than a month -->
-                       <h5 class="label label-800"> Cumple {{newAge}} el {{bDayPlain}}</h5>
+                       <h5 class="label label-800"> Cumple {{newAge dateOfBirth}} el {{bDayPlain actualBirthDay}}</h5>
                       {{/if}}<!--     inLessThanAMonth <<<<<< -->
                   {{/if}}<!--     inLessThanAWeek <<<<<< -->
                 {{/if}}<!--     isTomorrow <<<<<< -->
             {{/if}}<!--    hasPassed <<<<<< -->
         {{else}}
-          {{#if isToday }}<!-- >>>>>> isToday -->
+          {{#if isToday actualBirthDay}}<!-- >>>>>> isToday -->
             <h6 class="label label-100">Hoy cumple!</h6>
             {{else}} <!-- bDay is not today -->
-              {{#if hasPassed}}<!-- >>>>>>   hasPassed -->
-                {{#if moreThanAWeekAgo}}<!-- >>>>>>   moreThanAWeekAgo -->
-                    <h5 class="label label-800">Cumple: {{bDayPlain}}</h5>
+              {{#if hasPassed actualBirthDay}}<!-- >>>>>>   hasPassed -->
+                {{#if moreThanAWeekAgo actualBirthDay}}<!-- >>>>>>   moreThanAWeekAgo -->
+                    <h5 class="label label-800">Cumple: {{bDayPlain actualBirthDay}}</h5>
                   {{else}}  <!-- bDay was less than a week ago -->
-                    {{#if wasYesterday}}<!-- >>>>>>   wasYesterday -->
+                    {{#if wasYesterday actualBirthDay}}<!-- >>>>>>   wasYesterday -->
                         <h5 class="label label-200">Cumpli&oacute; ayer!</h5>
                       {{else}}
-                        <h6 class="label label-500">Cumpli&oacute; {{bDayClose}}</h6>
+                        <h6 class="label label-500">Cumpli&oacute; {{bDayClose actualBirthDay}}</h6>
                     {{/if}}<!--     wasYesterday <<<<<< -->
                 {{/if}}<!--     moreThanAWeekAgo <<<<<< -->
                 {{else}} <!-- bDay has not passed yet -->
-                  {{#if isTomorrow}}<!-- >>>>>>   isTomorrow  -->
+                  {{#if isTomorrow actualBirthDay}}<!-- >>>>>>   isTomorrow  -->
                     <h5 class="label label-200">Cumple  ma&ntilde;ana !</h5>
                     {{else}} <!-- bDay is not tomorrow -->
-                      {{#if inLessThanAWeek}}<!-- >>>>>>   inLessThanAWeek -->
-                          <h5 class="label label-300"> Cumple   {{bDayClose}}</h5>
+                      {{#if inLessThanAWeek actualBirthDay}}<!-- >>>>>>   inLessThanAWeek -->
+                          <h5 class="label label-300"> Cumple   {{bDayClose actualBirthDay}}</h5>
                         {{else}}<!-- bDay is in more than a week -->
-                          {{#if inLessThanAMonth}}<!-- >>>>>>   inLessThanAMonth -->
-                            <h5 class="label label-400"> Cumple  {{bDayLong}}</h5>
+                          {{#if inLessThanAMonth actualBirthDay}}<!-- >>>>>>   inLessThanAMonth -->
+                            <h5 class="label label-400"> Cumple  {{bDayLong actualBirthDay}}</h5>
                            {{else}}<!-- bDay is in more than a month -->
-                           <h5 class="label label-800"> Cumple: {{bDayPlain}}</h5>
+                           <h5 class="label label-800"> Cumple: {{bDayPlain actualBirthDay}}</h5>
                           {{/if}}<!--     inLessThanAMonth <<<<<< -->
                       {{/if}}<!--     inLessThanAWeek <<<<<< -->
                     {{/if}}<!--     isTomorrow <<<<<< -->
