--- a/client/components/Generic/Generics_show.html
+++ b/client/components/Generic/Generics_show.html
@@ -1,33 +1,36 @@
 <template name="Generics_show">
-  {{#each generics}}
-    <div class="panel panel-default appear-first">
-      <div class="panel-heading">{{es_name}}</div>
-      <div class="panel-body">
-        <form data-action='createGenericForm'>
-          <div class="form-group">
-            <h3> Este Gen&eacute;rico est&aacute; esperando validaci&oacute;n</h3>
-            <div class="input-group">
-              <label for="es_name">Palabras clave</label>
-              <input aria-describedby="basic-addon1" class="form-control" id='es_name' placeholder="Por ejemplo: 'PEAD PARA SOPLADO'" type="text" value={{es_keyword}}>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="input-group">
-              <label for="es_desc">Descripci&oacute;n</label>
-              <input aria-describedby="basic-addon1" class="form-control" id='es_desc' placeholder="Por ejemplo: 'Polietileno de alta densidad para usar en soplado de envases'" type="text" value={{es_desc}}>
-            </div>
-          </div>
-          <!--      <div class="form-group">
-          <div class="input-group">
-            <label for="globalCode">C&oacute;digo Global </label>
-            <p class='text-info'> Este va a ser el c&oacute;digo internacional para este gen&eacute;rico. Por eso debe estar en ingl&eacute;s.</p>
-            <input id='globalCode' type="text" class="form-control" placeholder="Por ejemplo : 'PEADBLOW'" aria-describedby="basic-addon1">
-          </div>
-        </div>-->
-          <!--<button class="btn btn-default" type="submit">CREAR</button>-->
-        </form>
-      </div>
-    </div>
 
-  {{/each}}
+
+  {{#panel title="This is a striped table design" footer="Table - 5 rows"}}
+
+                        <div class="table-responsive">
+                            <table cellpadding="1" cellspacing="1" class="table table-condensed table-striped">
+                                <thead>
+                                <tr>
+                                    <th>Nombre</th>
+                                    <th>Palabras Clave</th>
+                                    <th>Descripci&oacute;n</th>
+                                    <th>
+                                      Validado
+                                    </th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                  {{#each generics}}
+                                <tr>
+                                    <td>{{ar_name}}</td>
+                                    <td>{{ar_keyword}}</td>
+                                    <td>{{ar_desc}}</td>
+                                    <td>
+                                      {{#if valid}}SI{{else}}NO{{/if}}
+                                    </td>
+                                </tr>
+                                {{/each}}
+
+
+                                </tbody>
+                            </table>
+                        </div>
+
+                    {{/panel}}
 </template>
