--- a/client/components/common/navigation.html
+++ b/client/components/common/navigation.html
@@ -2,50 +2,49 @@
     <aside id="menu">
         <div id="navigation">
             <div class="profile-picture">
-                <a href="./">
+                <!-- <a href="./">
                     <img src="images/profile.jpg" class="img-circle m-b" alt="logo">
-                </a>
+                </a> -->
 
                 <div class="stats-label text-color">
-                    <span class="font-extra-bold font-uppercase"> useer</span>
+                    <span class=" text-left"> {{relatedPerson}}</span>
                     <!--<button data-action='loginWithFacebook' class='btn btn-default'>Login with Facebook</button>-->
-
-                    <div class="dropdown">
+                    <!-- <div class="dropdown">
                         <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                            <small class="text-muted">PERFIL <b class="caret"></b></small>
+                            <small class="text-muted">Mi Cuenta <b class="caret"></b></small>
                         </a>
                         <ul class="dropdown-menu animated flipInX m-t-xs">
-
+                    
                             <li class="divider"></li>
-                            <li><a data-action='logout' href="{{pathFor 'login'}}">SALIR</a></li>
+                            <li><a data-action='logout' href="{{pathFor 'login'}}">Mi Perfil</a></li>
+                            <li><a data-action='logout' href="{{pathFor 'login'}}">Entrar</a></li>
+                            <li><a data-action='logout' href="{{pathFor 'exit'}}">Salir</a></li>
                         </ul>
-                    </div>
+                    </div> -->
 
-                <!--    <div>
-                      <button data-action='logout' class='btn btn-sm btn-default'>SALIR</button>
-                    </div>-->
+                
 
-                    <div id="sparkline1" class="small-chart m-t-sm"></div>
-                    <div>
-                        <h4 class="font-extra-bold m-b-xs">
-                            $260 104,200
-                        </h4>
-                        <small class="text-muted">Your income from the last year in sales product X.</small>
-                    </div>
+                  
                 </div>
+                <br>
+                <div>
+                  <a href="{{pathFor 'Profile.show'}}"><i class='fa fa-pencil'>  </i><small>  Editar perfil</small></a>
+                  
+                </div>
+                
             </div>
 
             <ul class="nav" id="side-menu">
                 <li class="{{isActiveRoute regex='loadingButtons|codeEditor|panels|typography|buttons|components|alerts|modals|draggable|nestableList|tour|icons'}}">
-                    <a href="#"><span class="nav-label">Crear</span><span class="fa arrow"></span> </a>
+                    <a href="#">Crear<span class="fa arrow"></span> </a>
                     <ul class="nav nav-second-level {{isActiveRoute regex='loadingButtons|codeEditor|panels|typography|buttons|components|alerts|modals|draggable|nestableList|tour|icons' className='in'}}">
                         <li class="{{isActiveRoute regex='panels'}}"><a href="../create-company?relType=SUPL">Cliente</a></li>
                         <li class="{{isActiveRoute regex='typography'}}"><a href="../create-company?relType=CUST">Proveedor</a></li>
                         <li class="{{isActiveRoute regex='buttons'}}"><a href="{{pathFor 'createGeneric'}}">Gen&eacute;rico</a></li>
                     </ul>
                 </li>
-                <li class="{{isActiveRoute regex='emailView|emailCompose|notes|appPlans|faq|contacts|projects|project|socialBoard|timeline|profile|mailbox|blog|blogDetails|forum|forumDetails|gallery|calendar|search|chatView|fileManager|invoice'}}">
-                    <a href="#"><span class="nav-label">Mostrar</span><span class="fa arrow"></span> </a>
+                <li class="nav-second-level {{isActiveRoute regex='emailView|emailCompose|notes|appPlans|faq|contacts|projects|project|socialBoard|timeline|profile|mailbox|blog|blogDetails|forum|forumDetails|gallery|calendar|search|chatView|fileManager|invoice'}}">
+                    <a href="#">Ver<span class="fa arrow"></span> </a>
                     <ul class="nav nav-second-level {{isActiveRoute regex='emailView|emailCompose|notes|appPlans|faq|contacts|projects|project|socialBoard|timeline|profile|mailbox|blog|blogDetails|forum|forumDetails|gallery|calendar|search|chatView|fileManager|invoice' className="in"}}">
                         <li class="{{isActiveRoute regex='contacts'}}"><a href="../show-generics">Gen&eacute;ricos</a></li>
                     </ul>
