--- a/client/stylesheets/globals/various.import.less
+++ b/client/stylesheets/globals/various.import.less
@@ -1,3 +1,14 @@
+.display-mode:disabled {
+  border: none;
+  color: @color-navy-blue;
+  font-size: 30px;
+  margin-top: 10px;
+  background-color: transparent !important;
+  
+}
+
+
+
 /* Opacity */
 .opacity-0 {
   opacity: 0;
@@ -223,7 +234,7 @@
 
 #side-menu li a {
   color: @color-text;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-weight: 700;
   padding: 15px 20px;
 }
