edicion de rels ok

--- a/client/components/Dashboard/Dashboard.html
+++ b/client/components/Dashboard/Dashboard.html
@@ -38,14 +38,16 @@
         </div> -->
 
                 <div class="col-lg-3">
-
-                    {{#panel title="Clientes" panelClass="stats"}}
-
+                
+                
                     {{> Customers_panel}}
                     
-
-                    {{/panel}}
-
+                
+                
+                    <!-- {{> Vendors_panel}} -->
+                    
+                
+                
                 </div>
             </div>
           
