--- a/imports/ui/components/rel/rel-customer-edit.html
+++ b/imports/ui/components/rel/rel-customer-edit.html
@@ -50,7 +50,7 @@
         <div class='col-xs-12'>
           <span class="js-rel-customer-edit-cancel btn btn-default" type="submit">Cancelar</span>
           
-        <button class="btn btn-success" type="submit">CREAR</button>
+        <button class="btn btn-success" type="submit">Guardar</button>
       </div>
     </div>
 
