modulo clientes falta ver y editar contacts

--- a/client/components/Rel/rel-customer-show.html
+++ b/client/components/Rel/rel-customer-show.html
@@ -1,12 +1,17 @@
 <template name="Rel_customer_show">
 
                     <p>{{rel.notes}}</p>
-                    {{#if rel.paymentNotes}}
-                        <p>
-                          <i class='fa fa-credit-card'></i>
-                          {{rel.paymentDays}}
-                          {{rel.paymentTerms}}
-                          {{rel.paymentNotes}}
-                        </p>
+                    <p>
+                      
+                
+                    {{#if rel.paymentDays}}
+                        
+                          <i class='fa fa-money'></i>
+                    
+                      
                       {{/if}}
+                      {{rel.paymentDays}}
+                      {{rel.paymentTerms}}
+                      {{rel.paymentNotes}}
+                          </p>
 </template>
