--- a/imports/ui/components/rel/rel-customer-edit.html
+++ b/imports/ui/components/rel/rel-customer-edit.html
@@ -1,7 +1,6 @@
 <template name="Rel_customer_edit">
   <div class="panel panel-default appear-first">
-    <div class="panel-heading">RELACION CON ESTA EMPRESA</div>
-
+    <div class="panel-heading">Relaci&oacute;n con esta empresa</div>
     <div class="panel-body">
         <form data-action='form'>
           <div class='row'>
