--- a/client/stylesheets/globals/layout.import.less
+++ b/client/stylesheets/globals/layout.import.less
@@ -39,12 +39,13 @@ body {
 
 
 #wrapper {
+  /* margin: 0 0 0 0; */
   margin: 0 0 0 @menu-width;
   padding: 0;
   background: @color-background;
   border-left: 1px solid @border-color;
   transition: margin 0.4s ease 0s;
-  // position: absolute;
+  /* position: absolute; */
   position: relative;
   min-height: 100%;
   z-index: 1;
