--- a/client/stylesheets/globals/buttons.import.less
+++ b/client/stylesheets/globals/buttons.import.less
@@ -83,6 +83,7 @@
   color: @color-red-deep;
 }
 
+
 .btn-primary.btn-outline:hover,
 .btn-success.btn-outline:hover,
 .btn-info.btn-outline:hover,
@@ -252,6 +253,23 @@
 .btn-danger2.disabled, .btn-danger2.disabled:hover, .btn-danger2.disabled:focus, .btn-danger2.disabled:active, .btn-danger2.disabled.active, .btn-danger2[disabled], .btn-danger2[disabled]:hover, .btn-danger2[disabled]:focus, .btn-danger2[disabled]:active, .btn-danger2.active[disabled], fieldset[disabled] .btn-danger2, fieldset[disabled] .btn-danger2:hover, fieldset[disabled] .btn-danger2:focus, fieldset[disabled] .btn-danger2:active, fieldset[disabled] .btn-danger2.active {
   background-color: darken(@color-red-deep,6%);
   border-color: darken(@color-red-deep,6%);
+}
+.btn-female {
+  background-color: @color-female;
+  border-color: @color-female;
+  color: #FFFFFF ;
+}
+.btn-female:hover, .btn-female:focus, .btn-female:active, .btn-female.active, .open .dropdown-toggle.btn-female {
+  background-color: lighten(@color-female,6%);
+  border-color: lighten(@color-female,6%);
+  color: #FFFFFF ;
+}
+.btn-female:active, .btn-female.active, .open .dropdown-toggle.btn-female {
+  background-image: none;
+}
+.btn-female.disabled, .btn-female.disabled:hover, .btn-female.disabled:focus, .btn-female.disabled:active, .btn-female.disabled.active, .btn-female[disabled], .btn-female[disabled]:hover, .btn-female[disabled]:focus, .btn-female[disabled]:active, .btn-female.active[disabled], fieldset[disabled] .btn-female, fieldset[disabled] .btn-female:hover, fieldset[disabled] .btn-female:focus, fieldset[disabled] .btn-female:active, fieldset[disabled] .btn-female.active {
+  background-color: darken(@color-female,6%);
+  border-color: darken(@color-female,6%);
 }
 
 .btn-link {
