--- a/client/stylesheets/globals/various.import.less
+++ b/client/stylesheets/globals/various.import.less
@@ -76,6 +76,10 @@
 .text-primary {
   color: @color-navy-blue;
 }
+.text-female {
+  color: @color-female;
+}
+
 .text-primary-2 {
   color: @color-violet;
 }
