--- a/client/components/Contact/Contact_show.html
+++ b/client/components/Contact/Contact_show.html
@@ -1,4 +1,4 @@
-<template name="Contact_show">
+<template name="LEGACYContact_show">
 
     {{#if rel}}
     <div class='col-xs-12 col-md-6 col-lg-3'>
