--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -12,6 +12,7 @@
 @color-orange:#e67e22;
 @color-red:#e74c3c;
 @color-red-deep:#c0392b;
+@color-female:#81488a;
 
 @color-alert-100:#c0392b;
 @color-alert-200:#e67e22;
@@ -27,6 +28,7 @@
   height: 400px;
   margin: 10px 20px 10px 0;
 }
+
 
 
 
