--- a/imports/ui/components/contact/contact-edit.html
+++ b/imports/ui/components/contact/contact-edit.html
@@ -4,8 +4,8 @@
     <div class="panel-body">
       <form class="form-horizontal" data-action='form'>
         <div class="form-group">
-          <label class="control-label" for='treatedAsInput'>Se lo trata como </label>
-          <input  id='treatedAsInput'   data-action='treatedAsInput' name='treatedAs' type="text" class="form-control"  value={{rel.treatedAs}}>
+          <label class="control-label" for='treatedAsInput'>Le dicen ... </label>
+          <input  placeholder=" 'Ing. Fernandez', 'Pacho', 'Lorena'" id='treatedAsInput'   data-action='treatedAsInput' name='treatedAs' type="text" class="form-control"  value={{rel.treatedAs}}>
           <span class='form-control-feedback'></span>
           <span class='help-block'></span>
           <label> 
@@ -13,6 +13,7 @@
              <i class="fa fa-black-tie"></i> 
              Tratar de usted    
            </label> 
+           <br>
            <label> 
            <input checked="{{not rel.formalTreatment}}" type="radio" value="option3" id="optionsRadios3" name="optionsRadios1"> 
            <i class="fa fa-smile-o"></i>
@@ -20,8 +21,8 @@
           </label>
         </div>
         <div class="form-group">
-          <label class="control-label" for='positionInput'>A que se dedica en {{company.name}}? </label>
-          <input  id='positionInput'   data-action='positionInput' name='position' type="text" class="form-control"  value={{rel.position}}>
+          <label class="control-label" for='positionInput'>En {{company.name}} trabaja de ... </label>
+          <input  placeholder=" 'Jefe de Produccion', 'Gerente de Compras', 'Portero'" id='positionInput'   data-action='positionInput' name='position' type="text" class="form-control"  value={{rel.position}}>
           <span class='form-control-feedback'></span>
           <span class='help-block'></span>
         </div>
@@ -75,6 +76,12 @@
                 <span class='form-control-feedback'></span>
                 <span class='help-block'></span>
           </div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="form-group"><label class="col-sm-2 control-label">Email del trabajo</label>
+            <input id='emailInput' data-action='emailInput' name='email' type="text" class="form-control"  value={{person.email}} placeholder=" contacto@mail.com ">
+            <span class='form-control-feedback'></span>
+            <span class='help-block'></span>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="text-center">
