--- a/imports/ui/components/contact/contact-show.html
+++ b/imports/ui/components/contact/contact-show.html
@@ -1,58 +1,99 @@
-<template name="Person_show">
-{{#if editing}}
-{{> Person_edit (personArgs person)}}
-{{else}}
-<div class='js-component col-xs-12 col-sm-6 col-md-4 col-lg-3'>
+<template name="Contact_show">
+  
+  <div class=" {{#if showingOptionButtons}}js-hide-option-buttons{{else}}js-show-option-buttons{{/if}}">
+    <div class='row'>
+      <div class='col-xs-12 col-md-12 col-lg-12'>
+      
+        <p class='text-right'>
+          <!-- {{> Birthday_show }} -->
+          {{#if showingOptionButtons}}
+          <button class='btn btn-sm btn-default js-edit'><i class='fa fa-pencil'> </i> Editar</button>
+          <button class='btn btn-sm btn-default js-delete'><i class='fa fa-trash'> </i> Eliminar</button>
+          {{#if expanded}}<button class='btn btn-sm btn-default js-compress'><i class='fa fa-compress'> </i> Ver menos</button>
+        {{else}}
+        <button class='btn btn-sm btn-default js-expand'><i class='fa fa-expand'> </i> Ver m&aacute;s</button>
+        {{/if}}
+      {{/if}}
+      </p>
+        <h2 class='{{#if  rel.formalTreatment}}text-warning{{else}}text-success{{/if}}'>
+      {{rel.treatedAs}} 
+    </h2>
+    {{#if  rel.formalTreatment}}
+      <span class='label label-warning text-right'>FORMAL</span>
+    {{/if}}
+    <h3 class='female'>{{rel.position}}</h3>
+      
 
-{{#panel title="Datos de contacto" bodyClass="list"}}
+{{#if expanded}}
+      <p class='{{#if person.isMale}} text-primary {{else}} text-female {{/if}}'>
+        <small class='text-muted'>
+          {{#if person.isMale}}
+            <i class='fa fa-male'> </i>{{else}}
+            <i class='fa fa-female'> </i>
+          {{/if}}
 
-                    <div class="pull-right">
-                      <button class='btn btn-xs btn-default js-edit'><i class='fa fa-pencil'>  </i>  Editar</button>
-                    </div>
-                <!--     <div class="panel-title">Last Activity</div>
-                <small class="fo">This is simple example</small> -->
-                    <div class="list-item-container">
-                        <div class="list-item">
-                          <!-- <small>Nombre completo</small> -->
-                            <span class="pull-right font-bold">{{#if person.isMale}} <i class="fa fa-male text-color"></i>{{else}}<i class="fa fa-female text-color"></i>{{/if}}</span>
-                            <h3 class="no-margins font-extra-bold text-primary ">{{person.name}}  {{person.lastName}}</h3>
-                          
-                          
-                        </div>
-                        {{#if person.bDay}}
-                        <div class="list-item">
-                          <!-- <small>Nombre completo</small> -->
-                            <h6 class="no-margins  text-primary "><i class='fa fa-birthday-cake'></i> {{formatDate person.bDay person.bMonth person.bYear}}</h6>
-                        </div>
-                        {{/if}}
-                        
-                        {{#if person.email}}
-                        <div class="list-item">
-                          <!-- <small>Nombre completo</small> -->
-                            <h6 class="no-margins  text-primary "><i class='fa fa-envelope-o'></i> {{person.email}}</h6>
-                        </div>
-                        {{/if}}
-                        {{#if person.phone}}
-                        <div class="list-item">
-                          <!-- <small>Nombre completo</small> -->
-                            <h6 class="no-margins  text-primary "><i class='fa fa-phone'></i> {{formatInternational person.phone}} int.: {{person.internalPhone}}</h6>
-                        </div>
-                        {{/if}}
-                        {{#if person.mobile}}
-                        <div class="list-item">
-                          <!-- <small>Nombre completo</small> -->
-                            <h6 class="no-margins  text-primary "><i class='fa fa-mobile'></i> {{formatInternational person.mobile}}   </h6>
-                        </div>
-                        {{/if}}
-                        {{#if person.fin}}
-                        <div class="list-item">
-                          <!-- <small>Nombre completo</small> -->
-                            <h6 class="no-margins  text-primary "><i class='fa fa-book'></i> {{person.fin}}</h6>
-                        </div>
-                        {{/if}}
-                    </div>
 
-                {{/panel}}
-              </div>
-{{/if}}
+        </small>
+        {{person.name}}  {{person.lastName}}</p>
+        {{/if}}
+
+      </div>
+    </div>
+    <div class='row'>
+      <div class='col-xs-4 col-md-4 col-lg-4 text-center'>
+        {{#if person.email}}
+
+          <a class='btn btn-lg {{#if person.isMale}} btn-primary {{else}} btn-female {{/if}}' href='mailto:{{person.email}}' data-action='click-override'>
+            <i class='fa fa-envelope'></i>
+          </a>
+
+        {{/if}}
+
+      </div>
+      <div class='col-xs-4 col-md-4 col-lg-4 text-center'>
+
+        {{#if person.mobile}}
+          <a class='btn btn-lg {{#if person.isMale}} btn-primary {{else}} btn-female {{/if}}' href='tel:{{person.mobile}}' data-action='click-override'>
+            <i class='fa fa-whatsapp'></i>
+          </a>
+        {{/if}}
+
+      </div>
+      <div class='col-xs-4 col-md-4 col-lg-4 text-center'>
+
+        {{#if person.phone}}
+          <a class='btn btn-lg {{#if person.isMale}} btn-primary {{else}} btn-female {{/if}}' href='tel:{{person.phone}}' data-action='click-override'>
+            <i class='fa fa-phone'></i>
+          </a>
+        {{/if}}
+
+      </div>
+      {{#if expanded}}
+      <div class='col-xs-4 col-md-4 col-lg-4 text-center'>
+        {{#if person.email}}
+          <p class='{{#if person.isMale}} text-primary {{else}} text-female {{/if}}' >
+            <i class='fa fa-envelope'> </i>
+            {{person.email}}
+        </p>
+        {{/if}}
+        {{#if person.phone}}
+          <p class='{{#if person.isMale}} text-primary {{else}} text-female {{/if}}' >
+            <i class='fa fa-phone'> </i>
+            {{person.phone}}
+        </p>
+        {{/if}}
+      
+        {{#if person.mobile}}
+          <p class='{{#if person.isMale}} text-primary {{else}} text-female {{/if}}' >
+            <i class='fa fa-whatsapp'> </i>
+            {{person.mobile}}
+        </p>
+        {{/if}}
+
+      </div>
+      {{/if}}
+
+    </div>
+</div>
+  
 </template>
