--- a/imports/ui/components/company/company-edit.html
+++ b/imports/ui/components/company/company-edit.html
@@ -1,6 +1,6 @@
 <template name="Company_edit">
   
-  <div class='js-component col-xs-12 col-sm-6 col-md-4 col-lg-3'>
+  <!-- <div class='js-component col-xs-12 col-sm-6 col-md-4 col-lg-3'> -->
     
 
             
@@ -60,7 +60,7 @@
               
               
               
-          </div>  <!-- .js-component -->
+        
     
 
 </template>
