--- a/imports/ui/components/contact/contact-show.html
+++ b/imports/ui/components/contact/contact-show.html
@@ -5,7 +5,8 @@
       <div class='col-xs-12 col-md-12 col-lg-12'>
       
         <p class='text-right'>
-          <!-- {{> Birthday_show }} -->
+          <!-- {{> Birthday_show (showBirthdayArgs2 '33')}} -->
+          {{> Birthday_show (showBirthdayArgs person.bDay person.bMonth person.bYear)}}
           {{#if showingOptionButtons}}
           <button class='btn btn-sm btn-default js-edit'><i class='fa fa-pencil'> </i> Editar</button>
           <button class='btn btn-sm btn-default js-delete'><i class='fa fa-trash'> </i> Eliminar</button>
