--- a/imports/ui/components/place/place-edit.html
+++ b/imports/ui/components/place/place-edit.html
@@ -1,42 +1,4 @@
-<!--<template name="Place_edit">
-  <div class='panel panel-warning'>
-    <div class='panel-heading'>
-      EDITAR LUGAR
-    </div>
-    <div class='panel-body' >
-      <form role='form' data-action='save-edit'>
-        <div class='form-group'>
-          <label for='type'>Este lugar es ...</label>
-          <select name='type' id='placeType' class='form-control' value='3'>
-            <option value='1' > la oficina principal </option>
-            <option value='2' > el dep&oacute;sito donde reciben mercader&iacute;a </option>
-            <option value='3' > donde se retiran pagos </option>
-          </select>
-        </div>
-      <div class="input-group">
-        <span class="input-group-addon" id="basic-addon1"><i class='fa fa-map-marker'></i></span>
-        <input id='address' type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1" value='{{address}}'>
-      </div>
-      <div class="input-group">
-        <span class="input-group-addon" id="basic-addon1">T</span>
-        <input id='text' type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1" value='{{text}}'>
-      </div>
-      <div class="input-group">
-        <span class="input-group-addon" id="basic-addon1"><i class='fa fa-phone'></i></span>
-        <input id='phone' type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1" value='{{phone}}'>
-      </div>
-      <br>
-      <button class='btn btn-success' type='submit' >GUARDAR</button>
-    </form>
-
-    </div>
-  </div>
-</template>
--->
 <template name="Place_edit">
-  <div class="panel panel-warning appear-second">
-    <div class="panel-heading">EDITAR LUGAR</div>
-    <div class="panel-body">
       <form class="form" data-action="search">
         <div class="form-group">
           <label class='text-muted small-font' for="search">BUSCAR DIRECCI&Oacute;N :
@@ -44,7 +6,6 @@
           <input class="form-control" id='addressInput' name='search' placeholder="Empeza a tipear y selecciona" type="text">
           <br>
           <button class="btn btn-primary" type="submit" data-action='searchBtn'>BUSCAR</button>
-
         </div>
       </form>
       <div class='map_canvas'></div>
@@ -106,19 +67,31 @@
           </div>
         </div>
         <br>
+        <div class="form-group"><label class="col-sm-2 control-label">Tel&eacute;fono de l&iacute;nea de este lugar</label>
+          <input id='phoneInput' data-action='phoneInput' name='phone' type="text" class="form-control"  placeholder=" Tipo '02323-471-691'" value={{place.phone}}>
+          <span class='form-control-feedback'></span>
+          <span class='help-block'></span>
+        </div>
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Interno de este lugar</label>
+          <input id='internalPhoneInput' data-action='internalPhoneInput' name='internalPhone' type="number" class="form-control"   value={{place.internalPhone}} placeholder=" Tipo '3120' ">
+          <span class='form-control-feedback'></span>
+          <span class='help-block'></span>
+        </div>
+        <br>
         <div class='row'>
           <div class="col-md-6 col-sm-8 col-xs-12">
-            <input class='form-control' placeholder=" 'Entrada muy empinada', 'Timbre B', ' 2 A'" type="textarea" name="notes" id="notes">
+            <input class='form-control' placeholder=" 'Entrada muy empinada', 'Timbre B', ' 2 A'" type="textarea" name="notes" id="notes"  value={{place.notes}}>
           </div>
         </div>
         <br>
         <div class='row'>
           <div class="col-md-4 col-md-offset-4">
-            <button class="btn btn-warning" type="submit">EDITAR</button>
+            <span class="btn btn-default js-cancel">Cancelar</span>
+            <button class="btn btn-success" type="submit">Guardar</button>
           </div>
+      
         </div>
-
       </form>
-    </div>
-  </div>
+      
 </template>
