--- a/imports/ui/components/rel/rel-vendor-edit.html
+++ b/imports/ui/components/rel/rel-vendor-edit.html
@@ -1,6 +1,6 @@
-<template name="Rel_customer_edit">
+<template name="Rel_vendor_edit">
   <div class="panel panel-default appear-first">
-    <div class="panel-heading">Relaci&oacute;n con este cliente</div>
+    <div class="panel-heading">Relaci&oacute;n con este proveedor</div>
     <div class="panel-body">
         <form data-action='form'>
           <div class='row'>
@@ -47,7 +47,7 @@
           </div>
       <div class='row'>
         <div class='col-xs-12'>
-          <span class="js-rel-customer-edit-cancel btn btn-default" type="submit">Cancelar</span>
+          <span class="js-rel-vendor-edit-cancel btn btn-default" type="submit">Cancelar</span>
           
         <button class="btn btn-success" type="submit">Guardar</button>
       </div>
