--- a/client/components/common/navigation.html
+++ b/client/components/common/navigation.html
@@ -9,30 +9,35 @@
                 <div class="stats-label text-color">
                     <span class=" text-left"> {{relatedPerson}}</span>
                     <!--<button data-action='loginWithFacebook' class='btn btn-default'>Login with Facebook</button>-->
-                    <!-- <div class="dropdown">
-                        <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                            <small class="text-muted">Mi Cuenta <b class="caret"></b></small>
-                        </a>
-                        <ul class="dropdown-menu animated flipInX m-t-xs">
-                    
-                            <li class="divider"></li>
-                            <li><a data-action='logout' href="{{pathFor 'login'}}">Mi Perfil</a></li>
-                            <li><a data-action='logout' href="{{pathFor 'login'}}">Entrar</a></li>
-                            <li><a data-action='logout' href="{{pathFor 'exit'}}">Salir</a></li>
-                        </ul>
-                    </div> -->
-
-                
-
-                  
                 </div>
                 <br>
+                
+                <div class="dropdown btn btn-default">
+                    <a class="dropdown-toggle" href="#" data-toggle="dropdown">
+                        <small class="text-muted"> Opciones <b class="caret"></b></small>
+                    </a>
+                    <ul class="dropdown-menu animated flipInX m-t-xs">
+                
+                        <li class="divider"></li>
+                        {{#each workerRel in workerRels}}
+                        <!-- <li class='btn btn-default js-workfor' id='{{workerRel.destiny}}'>work </li> -->
+                        <li class='js-workfor' id='{{workerRel.destiny}}'>{{companyName workerRel.destiny}}</li>
+                        {{/each}}
+                        <li><a data-action='logout' href="{{pathFor 'login'}}">Entrar</a></li>
+                        <li><a data-action='logout' href="{{pathFor 'exit'}}">Salir</a></li>
+                    </ul>
+                </div>
+                <br>
+                <br>
+              
+                
                 <div>
-                  <a href="{{pathFor 'Profile.show'}}"><i class='fa fa-pencil'>  </i><small>  Editar perfil</small></a>
+                  <a class='btn btn-default' href="{{pathFor 'Profile.show'}}"><i class='fa fa-pencil'>  </i><small>  Editar perfil</small></a>
                   
                 </div>
                 
             </div>
+            <br>
 
             <ul class="nav" id="side-menu">
                 <li class="{{isActiveRoute regex='loadingButtons|codeEditor|panels|typography|buttons|components|alerts|modals|draggable|nestableList|tour|icons'}}">
